--- a/about-me.html
+++ b/about-me.html
@@ -3,7 +3,7 @@
 <head>
   <title>A Guide To Becoming An Avid Reader</title>
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
-  <link rel="stylesheet" type="text/css" href="suraabdulla/css/about-me.css">
+  <link rel="stylesheet" type="text/css" href="CSS/about-me.css">
 </head>
 <body>
   <nav>
