--- a/recommendations.html
+++ b/recommendations.html
@@ -3,7 +3,7 @@
 <head>
   <title>A Guide To Becoming An Avid Reader</title>
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
-  <link rel="stylesheet" type="text/css" href="suraabdulla/CSS/recommendations.css">
+  <link rel="stylesheet" type="text/css" href="CSS/recommendations.css">
 </head>
 <body>
   <nav>
