--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <title>A Guide To Becoming An Avid Reader</title>
   <meta http-equiv="content-type" content="text/html; charset=utf-8">
-  <link rel="stylesheet" type="text/css" href="CSS/styles.css">
+  <link href="CSS/styles.css" type="text/css" rel="stylesheet">
 </head>
 <body>
   <nav>
