--- a/recommendations.html
+++ b/recommendations.html
@@ -23,7 +23,7 @@
   <section>
   <h3>Mystery</h3>
   <img src="Images/pic6.jpg" alt="Mystery">
-    <p>I'm starting out with my favorite genre, because why not?
+    <p>I'm starting out with my favorite genre, because why not?</p>
     <br>
     I feel like mystery is a genre that can be loved by anyone. The suspense, guessing, and the cool detective characters always have the readers wanting more. They're suitable for readers who enjoy trying to actively solve things.
     <br>
@@ -40,10 +40,9 @@
         Murder on The Orient Express <i>by Agatha Christie.</i>
       </li>
     </ul>
-  </p>
   <h3>Thriller</h3>
   <img src="Images/pic7.jpg" alt="Thriller">
-  <p>If you enjoy being at the edge of your seat, then this genre is for you.
+  <p>If you enjoy being at the edge of your seat, then this genre is for you.</p>
     <br>
     The thriller genre is one that is closely associated with the mystery genre. However, the difference is that it tends to instill more fear into the readers, making you hold your breathe for the entirety of the journey.
     <br>
@@ -60,10 +59,9 @@
         The Silent Patient <i>by Alex Michaelides.</i>
       </li>
     </ul>
-  </p>
   <h3>Romance</h3>
   <img src="Images/pic8.jpg" alt="Romance">
-  <p>We all love a heartwarming romance story.
+  <p>We all love a heartwarming romance story.</p>
     <br>
     The romance genre is one that humans never seem to get tired of. Our ancestors wrote a whole lot about love, and we still continue to do so.
     <br>
@@ -80,10 +78,9 @@
         The Seven Husbands of Evelyn Hugo <i>by Taylor Jenkins Reid.</i>
       </li>
     </ul>
-  </p>
   <h3>Fantasy</h3>
   <img src="Images/pic9.jpg" alt="Fantasy">
-  <p>If you'd like to explore a different world setting, then fantasy is the best choice.
+  <p>If you'd like to explore a different world setting, then fantasy is the best choice.</p>
     <br>
     The world building, magic, and otherworldly creatures are what make the fantasy genre so intriguing. It's an escape from the real world, and more so than other genres. Fantasy books will show you how vast the human imagination could be, and will take you on adventures that you can't experience any other way.
     <br>
@@ -100,10 +97,9 @@
         A Song of Ice and Fire <i>by R. R. Martin.</i>
       </li>
     </ul>
-  </p>
   <h3>Classics</h3>
   <img src="Images/pic10.jpg" alt="Classics">
-  <p>We can't fully appreciate fiction without knowing the great classics that authors came up with in the olden times.
+  <p>We can't fully appreciate fiction without knowing the great classics that authors came up with in the olden times.</p>
     <br>
     The old classics are what shaped up fiction to be what it is today. It allows you to delve into a different period in time, and shows you how the world was back then, in the eyes of those authors.
     <br>
@@ -120,7 +116,6 @@
         Les Miserables <i>by Victor Hugo.</i>
       </li>
     </ul>
-  </p>
   <br>
 </section>
 </main>
