--- a/recommendations.html
+++ b/recommendations.html
@@ -23,12 +23,12 @@
   <section>
   <h3>Mystery</h3>
   <img src="Images/pic6.jpg" alt="Mystery">
-    <p>I'm starting out with my favorite genre, because why not?</p>
+    <p>I'm starting out with my favorite genre, because why not?
     <br>
     I feel like mystery is a genre that can be loved by anyone. The suspense, guessing, and the cool detective characters always have the readers wanting more. They're suitable for readers who enjoy trying to actively solve things.
     <br>
     <br>
-    Some mystery books that I'd recommend:
+    Some mystery books that I'd recommend:</p>
     <ul>
       <li>
         And Then There Were None <i>by Agatha Christie.</i>
@@ -42,12 +42,12 @@
     </ul>
   <h3>Thriller</h3>
   <img src="Images/pic7.jpg" alt="Thriller">
-  <p>If you enjoy being at the edge of your seat, then this genre is for you.</p>
+  <p>If you enjoy being at the edge of your seat, then this genre is for you.
     <br>
     The thriller genre is one that is closely associated with the mystery genre. However, the difference is that it tends to instill more fear into the readers, making you hold your breathe for the entirety of the journey.
     <br>
     <br>
-    Some thriller books that I'd recommend:
+    Some thriller books that I'd recommend:</p>
     <ul>
       <li>
         The Chalk Man <i>by C.J. Tudor.</i>
@@ -61,12 +61,12 @@
     </ul>
   <h3>Romance</h3>
   <img src="Images/pic8.jpg" alt="Romance">
-  <p>We all love a heartwarming romance story.</p>
+  <p>We all love a heartwarming romance story.
     <br>
     The romance genre is one that humans never seem to get tired of. Our ancestors wrote a whole lot about love, and we still continue to do so.
     <br>
     <br>
-    Some romance books that I'd recommend:
+    Some romance books that I'd recommend:</p>
     <ul>
       <li>
         Jane Eyre <i>by Charlotte Bronte.</i>
@@ -80,12 +80,12 @@
     </ul>
   <h3>Fantasy</h3>
   <img src="Images/pic9.jpg" alt="Fantasy">
-  <p>If you'd like to explore a different world setting, then fantasy is the best choice.</p>
+  <p>If you'd like to explore a different world setting, then fantasy is the best choice.
     <br>
     The world building, magic, and otherworldly creatures are what make the fantasy genre so intriguing. It's an escape from the real world, and more so than other genres. Fantasy books will show you how vast the human imagination could be, and will take you on adventures that you can't experience any other way.
     <br>
     <br>
-    Some fantasy books that I'd recommend:
+    Some fantasy books that I'd recommend:</p>
     <ul>
       <li>
         The Harry Potter series <i>by J. K. Rowling.</i>
@@ -99,12 +99,12 @@
     </ul>
   <h3>Classics</h3>
   <img src="Images/pic10.jpg" alt="Classics">
-  <p>We can't fully appreciate fiction without knowing the great classics that authors came up with in the olden times.</p>
+  <p>We can't fully appreciate fiction without knowing the great classics that authors came up with in the olden times.
     <br>
     The old classics are what shaped up fiction to be what it is today. It allows you to delve into a different period in time, and shows you how the world was back then, in the eyes of those authors.
     <br>
     <br>
-    Some classic books that I'd recommend:
+    Some classic books that I'd recommend:</p>
     <ul>
       <li>
         Oliver Twist <i>by Charles Dickens.</i>
