--- a/recommendations.html
+++ b/recommendations.html
@@ -28,7 +28,7 @@
     I feel like mystery is a genre that can be loved by anyone. The suspense, guessing, and the cool detective characters always have the readers wanting more. They're suitable for readers who enjoy trying to actively solve things.
     <br>
     <br>
-    Some mystery books that I'd recommend:</p>
+    Some mystery books that I'd recommend:
     <ul>
       <li>
         And Then There Were None <i>by Agatha Christie.</i>
@@ -40,6 +40,7 @@
         Murder on The Orient Express <i>by Agatha Christie.</i>
       </li>
     </ul>
+  </p>
   <h3>Thriller</h3>
   <img src="Images/pic7.jpg" alt="Thriller">
   <p>If you enjoy being at the edge of your seat, then this genre is for you.
@@ -47,7 +48,7 @@
     The thriller genre is one that is closely associated with the mystery genre. However, the difference is that it tends to instill more fear into the readers, making you hold your breathe for the entirety of the journey.
     <br>
     <br>
-    Some thriller books that I'd recommend:</p>
+    Some thriller books that I'd recommend:
     <ul>
       <li>
         The Chalk Man <i>by C.J. Tudor.</i>
@@ -59,6 +60,7 @@
         The Silent Patient <i>by Alex Michaelides.</i>
       </li>
     </ul>
+  </p>
   <h3>Romance</h3>
   <img src="Images/pic8.jpg" alt="Romance">
   <p>We all love a heartwarming romance story.
@@ -66,7 +68,7 @@
     The romance genre is one that humans never seem to get tired of. Our ancestors wrote a whole lot about love, and we still continue to do so.
     <br>
     <br>
-    Some romance books that I'd recommend:</p>
+    Some romance books that I'd recommend:
     <ul>
       <li>
         Jane Eyre <i>by Charlotte Bronte.</i>
@@ -78,6 +80,7 @@
         The Seven Husbands of Evelyn Hugo <i>by Taylor Jenkins Reid.</i>
       </li>
     </ul>
+  </p>
   <h3>Fantasy</h3>
   <img src="Images/pic9.jpg" alt="Fantasy">
   <p>If you'd like to explore a different world setting, then fantasy is the best choice.
@@ -85,7 +88,7 @@
     The world building, magic, and otherworldly creatures are what make the fantasy genre so intriguing. It's an escape from the real world, and more so than other genres. Fantasy books will show you how vast the human imagination could be, and will take you on adventures that you can't experience any other way.
     <br>
     <br>
-    Some fantasy books that I'd recommend:</p>
+    Some fantasy books that I'd recommend:
     <ul>
       <li>
         The Harry Potter series <i>by J. K. Rowling.</i>
@@ -97,6 +100,7 @@
         A Song of Ice and Fire <i>by R. R. Martin.</i>
       </li>
     </ul>
+  </p>
   <h3>Classics</h3>
   <img src="Images/pic10.jpg" alt="Classics">
   <p>We can't fully appreciate fiction without knowing the great classics that authors came up with in the olden times.
@@ -104,7 +108,7 @@
     The old classics are what shaped up fiction to be what it is today. It allows you to delve into a different period in time, and shows you how the world was back then, in the eyes of those authors.
     <br>
     <br>
-    Some classic books that I'd recommend:</p>
+    Some classic books that I'd recommend:
     <ul>
       <li>
         Oliver Twist <i>by Charles Dickens.</i>
@@ -116,6 +120,7 @@
         Les Miserables <i>by Victor Hugo.</i>
       </li>
     </ul>
+  </p>
   <br>
 </section>
 </main>
